"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

common/metaserver.c: Fix buffer overflow in metaserver_get_info().
x11/x11proto.h, x11/xutil.c: Use correct parameter type "uint16" for
   addsmooth().
Andreas Kirschbaum 2005-08-14

This commit adds full automake support for the client - previously, only the
gtk-v2 directory used automake, rest was Makefile.in - now everything is
automake - makes maintenance and distributions easier.
--
common/Makefile.am gtk/Makefile.am help/Makefile.am pixmaps/Makefile.am
 sound-src/Makefile.am utils/Makefile.am x11/Makefile.am pixmaps/Makefile.in 
 utils/Makefile.in help/Makefile.in: New Makefiles
Makefile.am, Makefile.in: Removed unneeded rules, move pixmap, help, util
   handling to makefiles in their own directories.
configure, configure.in: Update to include pixmap, help, util as
   directories.
gtk-v2/Makefile.am, gtk-v2/Makefile.in: Clean up some rules in this makefile.
common/Makefile.in, gtk/Makefile.in, sound-src/Makefile.in, x11/Makefile.in:
   Rebuilt as part of automake.
gtk-v2/src/Makefile.am, gtk-v2/src/Makefile.in: Add banner copyright, remove
   uneeded rules.
MSW 2005-08-11

------------------------------------------------------------------------------
Changes for 1.8.0:

Makefile.am, Makefile.in: Add missing pixmaps, change CHANGES to ChangeLog,
   update archive directive so it works.
aclocal.m4: updated
configure, configure.in: Updated for 1.8.0 release. Remove gnome/Makefile
   from list of Makefiles to create.
gtk-v2/Makefile.am, gtk-v2/Makefile.in: Add archive directive.
gtk-v2/src/Makefile.{am|in}: Add missing soruces to list so that archive
   works correctly. Add archive directive.
MSW 2005-08-10

gtk/keys.c: don't select text in widget under Windows.
Ryo 2005-07-30

gtk/gx11.c: fix a crash if closing login window. Weird behaviour, but no crash.
Ryo 2005-07-29

gtk/image.c: Remove stray '+' at beginning of line.
Andreas Kirschbaum 2005-07-21
